ADD : choose my character

--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -4,8 +4,15 @@
   background: #fff;
 }
 
-button {
-  /* padding: 0;
-  display: grid;
-  place-items: center; */
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.my-character {
+  background-color: aquamarine;
+}
+
+.thanos {
+  background-color: #f44336;
 }
